--- a/.gitignore
+++ b/.gitignore
@@ -335,7 +335,7 @@ paket-files/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json`;
+!.vscode/extensions.json
 
 # CodeRush
 .cr/
