--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
+    "@nestjs/graphql": "^9.0.4",
+    "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
+    "apollo-server-express": "^3.3.0",
+    "graphql": "^15.6.0",
+    "mongoose": "^6.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0"
