--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "jest": "^27.0.6",
+    "mongodb": "^4.1.2",
     "prettier": "^2.3.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
