--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.6",
+    "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.6",
     "@nestjs/graphql": "^9.0.4",
     "@nestjs/mongoose": "^8.0.1",
