--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.6",
     "@nestjs/graphql": "^9.0.4",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "apollo-server-express": "^3.3.0",
+    "aws-sdk": "^2.1028.0",
     "graphql": "^15.6.0",
+    "graphql-upload": "^12.0.0",
     "mongoose": "^6.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
