--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
+    "@types/graphql-upload": "^8.0.7",
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
     "graphql": "^15.6.0",
