--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,8 @@ Temporary Items
 .env
 .env.*
 dist
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
