--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/serve-static": "^2.2.2",
     "@types/graphql-upload": "^8.0.7",
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
@@ -51,6 +52,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "jest": "^27.0.6",
+    "lerna": "^4.0.0",
     "mongodb": "^4.1.2",
     "prettier": "^2.3.2",
     "supertest": "^6.1.6",
