--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,47 +1,70 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "foyir-client",
+  "version": "0.2.0",
   "private": true,
-  "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
-  "license": "MIT",
-  "scripts": {
-    "start": "node index.js",
-    "start:watch": "nodemon",
-    "prestart:prod": "tsc",
-    "start:prod": "node dist/server.js",
-    "test": "jest"
+  "engines": {
+    "node": "14.18.1"
   },
+  "proxy": "http://localhost:8080",
   "dependencies": {
-    "@nestjs/common": "^4.5.1",
-    "@nestjs/core": "^4.5.1",
-    "@nestjs/microservices": "^4.5.1",
-    "@nestjs/testing": "^4.5.1",
-    "@nestjs/websockets": "^4.5.1",
-    "redis": "^2.8.0",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.5",
-    "typescript": "^2.6.2"
+    "@apollo/client": "^3.4.16",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
+    "@mui/system": "^5.1.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@trendyol-js/react-carousel": "^2.0.0",
+    "@types/apollo-upload-client": "^14.1.0",
+    "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-slick": "^0.23.7",
+    "@types/video.js": "^7.3.27",
+    "apollo-upload-client": "^16.0.0",
+    "express": "^4.17.1",
+    "graphql": "^16.0.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0",
+    "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "start:dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/express": "^4.0.39",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.5.1",
-    "@types/supertest": "^2.0.4",
-    "jest": "^21.2.1",
-    "nodemon": "^1.13.3",
-    "supertest": "^3.0.0",
-    "ts-jest": "^21.2.4",
-    "ts-node": "^4.0.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    }
+    "video.js": "^7.17.0"
   }
 }
