updates start script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "lerna clean",
     "install": "lerna bootstrap",
     "build": "lerna run build",
-    "start": "npm run clean && npm run install && npm run build",
+    "start": "npm run clean && npm run install && npm run build && npm run start:dev",
     "start:dev": "lerna run --parallel start:dev",
     "start:prod": "lerna run start:prod",
     "deploy": "eb deploy"
