--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "@types/graphql-upload": "^8.0.7",
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
+    "dotenv": "^11.0.0",
     "graphql": "^15.6.0",
     "graphql-upload": "^12.0.0",
     "mongoose": "^6.0.7",
