--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "npx lerna run build",
-    "start": "npx lerna run start:prod",
+    "start": "npx lerna run start:prod --stream",
     "start:dev": "npx lerna run --parallel start:dev",
     "deploy:dev": "eb deploy foyir-mono-development",
     "test": "lerna run test && lerna run test:e2e"
