--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foyir-client",
-  "version": "1.3.1",
+  "version": "1.3.2-alpha.0",
   "private": true,
   "engines": {
     "node": "14.18.1"
