--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npx lerna run build",
     "deploy:dev": "npm run build && eb deploy foyir-mono-development",
-    "start": "npx lerna run start:prod --stream",
+    "start": "npm run build && npx lerna run start:prod --stream",
     "start:dev": "npx lerna run --parallel start:dev",
     "test": "lerna run test && lerna run test:e2e"
   },
