--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "express-basic-auth": "^1.2.1",
-    "react-youtube": "^7.14.0"
+    "express-basic-auth": "^1.2.1"
   }
 }
