--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.14.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
