--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
+    "jest-junit": "^13.0.0",
     "lerna": "^4.0.0"
   },
   "dependencies": {
