--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,11 +13,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --forceExit",
+    "test": "jest --forceExit --ci --reporters=default --reporters=jest-junit",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --forceExit --config ./test/jest-e2e.json"
+    "test:e2e": "jest --forceExit --config ./test/jest-e2e.json --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.6",
@@ -76,6 +76,10 @@
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
