--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy:dev": "npm run build && eb deploy foyir-mono-development",
     "start": "npm run build && npx lerna run start:prod --stream",
     "start:dev": "npx lerna run --parallel start:dev",
-    "test": "npx lerna run --parallel test && lerna run test:e2e"
+    "test": "npx lerna run --parallel test"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "express-basic-auth": "^1.2.1"
+    "express-basic-auth": "^1.2.1",
+    "jest": "^27.5.1"
   }
 }
