--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
+    "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
     "rimraf": "^3.0.2"
   },
