--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy:dev": "npm run build && eb deploy foyir-mono-development",
     "start": "npm run build && npx lerna run start:prod --stream",
     "start:dev": "npx lerna run start:dev --stream",
-    "test": "npx lerna run test --stream",
+    "test": "npx lerna run test --stream --",
     "test:e2e": "npx lerna run test:e2e --stream"
   },
   "devDependencies": {
