--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,29 @@ orbs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  test: # This is the name of the workflow, feel free to change it to better match your workflow.
+  tests/unit: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - node/test:
+          test-results-for: jest
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '14.16'
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
+  tests/e2e: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
+    jobs:
+      - node/test:
+          executor:
+            name: node/default
+            tag: '14.16'
+          steps:
+            - checkout
+            - node/install-packages
+            - run:
+              command: npm run test:e2e
           test-results-for: jest
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
