--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ orbs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  tests/unit: # This is the name of the workflow, feel free to change it to better match your workflow.
+  tests-unit: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - node/test:
@@ -20,7 +20,7 @@ workflows:
           version: '14.16'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
-  tests/e2e: # This is the name of the workflow, feel free to change it to better match your workflow.
+  tests-e2e: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - node/test:
