--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,5 +24,13 @@ workflows:
   tests-e2e: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - node/run:
-          npm-run: test:e2e
+      - node/test:
+          run-command: test:e2e
+          test-results-for: jest
+          test-results-path: junit.xml
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '14.16'
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
