--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --forceExit --config ./test/jest-e2e.json --ci --reporters=default --reporters=jest-junit"
+    "test:e2e": "jest --forceExit --config ./test/jest-e2e.json --ci --detectOpenHandles"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.6",
