--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "npx lerna run build",
     "clean": "npx lerna clean",
     "deploy:dev": "npm run build && eb deploy foyir-mono-development",
-    "start": "npm run build && npx lerna run start:prod --stream",
-    "start:dev": "npx lerna run start:dev --stream",
+    "start": "npm run build && npx lerna run start:prod --stream --",
+    "start:dev": "npx lerna run start:dev --stream --",
     "test": "npx lerna run test --stream --",
-    "test:e2e": "npx lerna run test:e2e --stream"
+    "test:e2e": "npx lerna run test:e2e --stream --"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
