--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,14 @@ workflows:
           pkg-manager: npm
   tests-e2e: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
-    - node/test:
-        run-command: test:e2e
-        test-results-for: jest
-        test-results-path: junit.xml
-        # This is the node version to use for the `cimg/node` tag
-        # Relevant tags can be found on the CircleCI Developer Hub
-        # https://circleci.com/developer/images/image/cimg/node
-        version: '14.16'
-        # If you are using yarn, change the line below from "npm" to "yarn"
-        pkg-manager: npm
+    jobs:
+      - node/test:
+          run-command: test:e2e
+          test-results-for: jest
+          test-results-path: junit.xml
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '14.16'
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
