--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.1",
   "private": true,
   "engines": {
-    "node": "14.18.1"
+    "node": "14.16.1"
   },
   "proxy": "http://localhost:8080",
   "dependencies": {
@@ -17,7 +17,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/apollo-upload-client": "^14.1.0",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.177",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -38,7 +38,6 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "node server.js",
     "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
@@ -63,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "jest-junit": "^13.0.0",
     "video.js": "^7.17.0"
   }
 }
