--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,11 +13,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --forceExit --ci --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --forceExit --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json --ci --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.6",
@@ -37,7 +37,8 @@
     "mongoose": "^6.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.3.0"
+    "rxjs": "^7.3.0",
+    "express-basic-auth": "^1.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
@@ -52,7 +53,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "jest": "^27.0.6",
+    "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
     "mongodb": "^4.1.2",
     "prettier": "^2.3.2",
