--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ workflows:
     jobs:
       - node/test:
           name: 'unit tests'
-          test-results-for: jest
+          test-results-path: ./packages/server/junit.xml
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
           # https://circleci.com/developer/images/image/cimg/node
@@ -27,7 +27,7 @@ workflows:
       - node/test:
           name: 'e2e tests'
           run-command: test:e2e
-          test-results-for: jest
+          test-results-path: ./packages/server/junit.xml
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
           # https://circleci.com/developer/images/image/cimg/node
