--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,33 +6,35 @@ version: 2.1
 orbs:
   node: circleci/node@5.0.0
 
+jobs:
+  unit-tests:
+    - node/test:
+        name: 'unit-tests'
+        test-results-for: jest
+        test-results-path: ./packages/server/junit.xml
+        # This is the node version to use for the `cimg/node` tag
+        # Relevant tags can be found on the CircleCI Developer Hub
+        # https://circleci.com/developer/images/image/cimg/node
+        version: '14.16'
+        # If you are using yarn, change the line below from "npm" to "yarn"
+        pkg-manager: npm
+  e2e-tests:
+    - node/test:
+        name: 'e2e-tests'
+        run-command: test:e2e
+        test-results-for: jest
+        test-results-path: ./packages/server/junit.xml
+        # This is the node version to use for the `cimg/node` tag
+        # Relevant tags can be found on the CircleCI Developer Hub
+        # https://circleci.com/developer/images/image/cimg/node
+        version: '14.16'
+        # If you are using yarn, change the line below from "npm" to "yarn"
+        pkg-manager: npm
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  tests-unit: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  tests:
     jobs:
-      - node/test:
-          name: 'unit tests'
-          test-results-for: jest
-          test-results-path: ./packages/server/junit.xml
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '14.16'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
-  tests-e2e: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - node/test:
-          name: 'e2e tests'
-          run-command: test:e2e
-          test-results-for: jest
-          test-results-path: ./packages/server/junit.xml
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '14.16'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+      - unit-tests
+      - e2e-tests
