--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,5 @@ workflows:
           version: '14.16'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+      - store_test_results:
+        path: ./packages/server/junit.xml
