--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,5 @@ workflows:
     jobs:
       - run-unit-tests
       - run-e2e-tests
-      - store_test_results:
-        path: ./packages/server/junit.xml
+      # - store_test_results:
+      #   path: ./packages/server/junit.xml
