--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,25 +9,26 @@ orbs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  jobs:
-    - node/test:
-        name: 'unit-tests'
-        test-results-for: jest
-        test-results-path: ./packages/server/junit.xml
-        # This is the node version to use for the `cimg/node` tag
-        # Relevant tags can be found on the CircleCI Developer Hub
-        # https://circleci.com/developer/images/image/cimg/node
-        version: '14.16'
-        # If you are using yarn, change the line below from "npm" to "yarn"
-        pkg-manager: npm
-    - node/test:
-        name: 'e2e-tests'
-        run-command: test:e2e
-        test-results-for: jest
-        test-results-path: ./packages/server/junit.xml
-        # This is the node version to use for the `cimg/node` tag
-        # Relevant tags can be found on the CircleCI Developer Hub
-        # https://circleci.com/developer/images/image/cimg/node
-        version: '14.16'
-        # If you are using yarn, change the line below from "npm" to "yarn"
-        pkg-manager: npm
+  test-suite:
+    jobs:
+      - node/test:
+          name: 'unit-tests'
+          test-results-for: jest
+          test-results-path: ./packages/server/junit.xml
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '14.16'
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
+      - node/test:
+          name: 'e2e-tests'
+          run-command: test:e2e
+          test-results-for: jest
+          test-results-path: ./packages/server/junit.xml
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '14.16'
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
