--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foyir-server",
   "private": true,
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
@@ -32,13 +32,13 @@
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
     "dotenv": "^11.0.0",
+    "express-basic-auth": "^1.2.1",
     "graphql": "^15.6.0",
     "graphql-upload": "^12.0.0",
     "mongoose": "^6.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.3.0",
-    "express-basic-auth": "^1.2.1"
+    "rxjs": "^7.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
