--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
+    "@types/react-test-renderer": "^17.0.1",
     "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
