--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@5.0.0
+  jira: circleci/jira@1.3.1
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -21,6 +22,8 @@ workflows:
           version: '14.16'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+          post-steps:
+            - jira/notify
       - node/test:
           name: 'e2e-tests'
           run-command: test:e2e
@@ -32,3 +35,5 @@ workflows:
           version: '14.16'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+          post-steps:
+            - jira/notify
