updates deploy command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "npx lerna bootstrap",
     "build": "npx lerna run build",
     "clean": "npx lerna clean",
-    "deploy:dev": "npm run build && eb deploy foyir-mono-development",
+    "deploy:dev": "npx lerna run build && eb deploy foyir-mono-development",
     "start": "npm run build && npx lerna run start:prod --stream --",
     "start:dev": "npx lerna run start:dev --stream --",
     "test": "npx lerna run test --stream --",
