--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "node-sass": "^6.0.1"
   }
 }
