--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foyir-client",
-  "version": "1.4.4",
+  "version": "1.4.5-alpha.0",
   "private": true,
   "engines": {
     "node": "14.16.1"
