--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   },
   "scripts": {
     "postinstall": "npx lerna bootstrap",
+    "prebuild": "npm rebuild node-sass --force",
     "build": "npx lerna run build --stream --",
     "clean": "npx lerna clean",
-    "deploy:dev": "npx lerna run build && eb deploy foyir-mono-development",
+    "deploy:dev": "npm run build && eb deploy foyir-mono-development",
     "start": "npm run build && npx lerna run start:prod --stream --",
     "start:dev": "npx lerna run start:dev --stream --",
     "test": "npx lerna run test --stream --",
@@ -24,7 +25,6 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "axios": "^0.26.0",
-    "node-sass": "^6.0.1"
+    "axios": "^0.26.0"
   }
 }
