--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
     "deploy:dev": "eb deploy foyir-mono-development",
     "start": "npx lerna run start:prod",
     "start:dev": "npx lerna run start:dev --stream",
-    "test": "npx lerna run test --stream --",
-    "test:e2e": "npx lerna run test:e2e --stream --"
+    "test": "npx lerna run test --stream",
+    "test:e2e": "npx lerna run test:e2e --stream"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "@types/react-test-renderer": "^17.0.1",
     "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
-    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
