--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@apollo/link-context": "^2.0.0-beta.3",
+    "@auth0/auth0-react": "^1.9.0",
     "@auth0/auth0-spa-js": "^1.20.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
