--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,6 +8,9 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@apollo/link-context": "^2.0.0-beta.3",
+    "@auth0/auth0-react": "^1.9.0",
+    "@auth0/auth0-spa-js": "^1.20.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.0",
@@ -23,6 +26,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/video.js": "^7.3.27",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.25.0",
     "express": "^4.17.1",
@@ -62,9 +67,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-test-renderer": "^17.0.1",
     "jest-junit": "^13.0.0",
-    "react-test-renderer": "^17.0.2",
     "video.js": "^7.17.0"
   }
 }
