--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql": "^9.0.4",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^8.0.1",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/serve-static": "^2.2.2",
     "@types/graphql-upload": "^8.0.7",
@@ -38,7 +39,10 @@
     "express-basic-auth": "^1.2.1",
     "graphql": "^15.6.0",
     "graphql-upload": "^12.0.0",
+    "jwks-rsa": "^2.0.5",
     "mongoose": "^6.0.7",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0"
