--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -45,7 +45,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.3.0"
+    "rxjs": "^7.3.0",
+    "stripe": "^8.205.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
