--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "graphql": "^16.0.0",
     "lodash": "^4.17.21",
+    "mixpanel-browser": "^2.45.0",
     "node-sass": "^4.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -67,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.38.0",
     "jest-junit": "^13.0.0",
     "video.js": "^7.17.0"
   }
