--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foyir-server",
   "private": true,
-  "version": "1.4.10",
+  "version": "1.4.11-alpha.0",
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "engines": {
